Added basic navbar to home page, added title text to login page. Need to add css file. Consider changing navbar to a template.

--- a/templates/login.html
+++ b/templates/login.html
@@ -6,6 +6,8 @@
     <title>Login Page</title>
 </head>
 <body>
-
+    <main class="LoginText">
+        <h1 class="welcomeTitle">Login page</h1>
+    </main>
 </body>
 </html>
