--- a/templates/login.html
+++ b/templates/login.html
@@ -1,11 +1,32 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login Page</title>
+    <link rel="stylesheet" href="{% static 'global.css' %}">
 </head>
 <body>
+    {% include "navbar.html" %}
 
+    <!-- Main content for the Login page -->
+    <main class="LoginText">
+        <h1 class="welcomeTitle">Login Page</h1>
+        <form action="/perform_login" method="post">
+            {% csrf_token %}
+            <div>
+                <label for="username">Username:</label>
+                <input type="text" id="username" name="username">
+            </div>
+            <div>
+                <label for="password">Password:</label>
+                <input type="password" id="password" name="password">
+            </div>
+            <div>
+                <button type="submit">Login</button>
+            </div>
+        </form>
+    </main>
 </body>
 </html>
