--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -1,7 +1,7 @@
 <!-- templates/navbar.html -->
 <nav class="navbar">
     <div class="navbar-left">
-        <a href="/">InvestorHub</a>
+        <a href="/home">InvestorHub</a>
     </div>
     <div class="navbar-right">
         <a href="/home">Home</a>
