--- a/templates/index.html
+++ b/templates/index.html
@@ -9,12 +9,14 @@
 </head>
 <body>
     {% include "navbar.html" %}
-    
-    <!-- Main content -->
+
+    <!-- Main content for the Welcome page -->
     <main class="Welcome">
-        <h1 class="welcomeTitle">Welcome to InvestorHub</h1>
-        <p class="welcomeSubtitle">InvestorHub lets you track the stock market.</p>
-        <a href="/login" class="loginButton">Login</a>
+        <div class="centered-text">
+            <h1 class="welcomeTitle">InvestorHub lets you track the stock market</h1>
+            <p class="welcomeSubtitle">Welcome to InvestorHub</p>
+            <a href="/login" class="loginButton">Login</a>
+        </div>
     </main>
 </body>
 </html>
