--- a/templates/index.html
+++ b/templates/index.html
@@ -16,6 +16,7 @@
             <h1 class="welcomeTitle">InvestorHub lets you track the stock market</h1>
             <p class="welcomeSubtitle">Welcome to InvestorHub</p>
             <a href="/login" class="loginButton">Login</a>
+            <a href="/register" class="signupButton">Sign Up</a>
         </div>
     </main>
 </body>
