--- a/templates/login.html
+++ b/templates/login.html
@@ -12,8 +12,8 @@
 
     <!-- Main content for the Login page -->
     <div class="container">
-        <h1>Login Page</h1>
-        <form action="/perform_login" method="post">
+        <h1>Login</h1>
+        <form action="/perform_login" method="GET">
             {% csrf_token %}
             <div>
                 <label for="username">Username:</label>
