--- a/templates/register.html
+++ b/templates/register.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Login Page</title>
+    <title>Sign Up</title>
     <link rel="stylesheet" href="{% static 'global.css' %}">
 </head>
 <body>
@@ -13,32 +13,10 @@
     <!-- Main content for the Login page -->
     <div class="container">
         <h1>Sign Up</h1>
-        <form action="/perform_signup" method="post">
+        <form method="post">
             {% csrf_token %}
-            <div>
-                <label for="firstname">First Name:</label>
-                <input type="text" id="firstname" name="firstname" maxlength="100" required>
-            </div>
-            <div>
-                <label for="lastname">Last Name:</label>
-                <input type="text" id="lastname" name="lastname" maxlength="100" required>
-            </div>
-            <div>
-                <label for="email">Email:</label>
-                <input type="email" id="email" name="email" required>
-            </div>
-            <div>
-                <label for="username">Username:</label>
-                <input type="text" id="username" name="username" required>
-            </div>
-            <div>
-                <label for="password">Password:</label>
-                <input type="password" id="password" name="password" required>
-            </div>
-            <div>
-                <input type="submit" value="Login">
-                <button type="button" class="back-button" onclick="window.history.back();">Back</button>
-            </div>
+            {{ form.as_p }}
+            <button type="submit">Submit</button>
         </form>
     </div>
 </body>
