--- a/SearchApp/static/global.css
+++ b/SearchApp/static/global.css
@@ -111,3 +111,39 @@ button.back-button:hover {
     text-decoration: none;
     color: #bbb; /* Lighten color on hover for a subtle effect */
 }
+
+/*style for regex messages*/
+.messages p {
+    color: red; /* Default color for error messages */
+    border: 1px solid #ffa1a1; /* Light red border */
+    background-color: #ffecec; /* Very light red background */
+    padding: 10px;
+    margin-bottom: 20px;
+    border-radius: 5px;
+}
+
+.search-bar {
+    text-align: center;
+    margin: 20px;
+}
+
+.search-bar input[type="text"] {
+    width: 50%;
+    padding: 8px;
+    margin-right: 10px;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+}
+
+.search-bar button {
+    padding: 10px 20px;
+    background-color: #4CAF50;
+    color: white;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+}
+
+.search-bar button:hover {
+    background-color: #45a049;
+}
