--- a/templates/login.html
+++ b/templates/login.html
@@ -13,7 +13,14 @@
     <!-- Main content for the Login page -->
     <div class="container">
         <h1>Login</h1>
-        <form action="/perform_login" method="POST">
+        {% if messages %}
+        <div class="messages">
+            {% for message in messages %}
+            <p{% if message.tags %} class="{{ message.tags }}" {% endif %}>{{ message }}</p>
+            {% endfor %}
+        </div>
+        {% endif %}
+        <form action="{% url 'dashboard' %}" method="POST">
             {% csrf_token %}
             <div>
                 <label for="username">Username:</label>
