--- a/templates/login.html
+++ b/templates/login.html
@@ -20,7 +20,7 @@
             {% endfor %}
         </div>
         {% endif %}
-        <form action="{% url 'dashboard' %}" method="POST">
+        <form action="{% url 'login' %}" method="POST">
             {% csrf_token %}
             <div>
                 <label for="username">Username:</label>
