--- a/templates/savedcomparisons.html
+++ b/templates/savedcomparisons.html
@@ -11,19 +11,13 @@
     {% include "navbar.html" %}
 
     <!-- Main content for the dashboard page -->
-    <main class="main-dashboard">
+    <main class="main-savedcomparisons">
         <div class="centered-text">
             <h1 class="welcomeTitle">InvestorHub lets you track the stock market</h1>
-            <p class="welcomeSubtitle">Enter your query into the search bar below!</p>
+            <p class="welcomeSubtitle">Here are your saved comparisons!</p>
         </div>
 
-        <!-- Non-functional Search bar for stock queries -->
-        <div class="search-bar">
-            <form>
-                <input type="text" placeholder="Search stocks..." aria-label="Search stocks">
-                <button type="button">Search</button> <!-- Button does nothing on click -->
-            </form>
-        </div>
+        
     </main>
 </body>
 </html>
