Added metrics file with description of used metrics in comparisons. Added button css for the login and signup buttons on the home page.

--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -5,6 +5,7 @@
     </div>
     <div class="navbar-right">
         <a href="/home">Home</a>
+        <a href="/metrics">Metrics</a>
         <a href="/savedcomparisons">SavedComparisons</a>
         <a href="/settings">Settings</a>
         <a href="/dashboard">Dashboard</a>
