--- a/templates/savedcomparisons.html
+++ b/templates/savedcomparisons.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>InvestorHub Dashboard</title>
+    <title>InvestorHub SavedComparisons</title>
     <link rel="stylesheet" href="{% static 'global.css' %}">
 </head>
 <body>
