--- a/SearchApp/static/global.css
+++ b/SearchApp/static/global.css
@@ -69,6 +69,37 @@ h2, h1 {
     text-align: center;
 }
 
+/* Button-like styles for Login and Sign Up links */
+.loginButton,
+.signupButton {
+    display: inline-block;
+    padding: 10px 20px;
+    margin: 10px; 
+    background-color: #5cb85c; 
+    color: white; 
+    text-decoration: none; 
+    border-radius: 4px; 
+    transition: background-color 0.3s, transform 0.2s; 
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2); 
+    cursor: pointer; 
+}
+
+/* Hover effect for buttons */
+.loginButton:hover,
+.signupButton:hover {
+    background-color: #4cae4c; 
+    transform: scale(1.05); 
+}
+
+/* Additional specific styles for Sign Up button if needed */
+.signupButton {
+    background-color: #337ab7; 
+}
+
+.signupButton:hover {
+    background-color: #286090; 
+}
+
 
 /* Label styles for form elements */
 label {
@@ -187,4 +218,32 @@ button.back-button:hover {
 
 .search-bar button:hover {
     background-color: #45a049;
+}
+
+/* Metrics Section Styling */
+.metrics-section {
+    display: flex;
+    flex-direction: column;
+    max-width: 1024px;
+    margin: 0 auto;
+}
+
+.metric {
+    background: #fff;
+    border-radius: 5px;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+    padding: 20px;
+    margin-bottom: 20px;
+}
+
+.time-range-selector {
+    text-align: right;
+    margin-top: 20px;
+}
+
+/* Time Range Selector Styling */
+select {
+    padding: 5px 10px;
+    border-radius: 4px;
+    border: 1px solid #ccc;
 }
