--- a/templates/login.html
+++ b/templates/login.html
@@ -13,7 +13,7 @@
     <!-- Main content for the Login page -->
     <div class="container">
         <h1>Login</h1>
-        <form action="/perform_login" method="POST">
+        <form method="POST">
             {% csrf_token %}
             <div>
                 <label for="username">Username:</label>
