--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -9,7 +9,7 @@
         <a href="/dashboard">Dashboard</a>
         {% if user.is_authenticated %}
             <span>Hi, {{  user.username }}!</span>
-            <form action="{% url 'logout' %}" method="post" style="display: inline;">
+            <form action="{% url 'logout' %}" method="post">
                 {% csrf_token %}
                 <input type="submit" value="Logout">
             </form>
