--- a/templates/login.html
+++ b/templates/login.html
@@ -24,6 +24,9 @@
                 <input type="password" id="password" name="password">
             </div>
             <div>
+                <label>{% for ticker in Stock.object %} {{ticker}} {% endfor %}</label>
+            </div>
+            <div>
                 <input type="submit" value="Login">
                 <button type="button" class="back-button" onclick="window.history.back();">Back</button>
             </div>
