--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -10,4 +10,15 @@
         <a href="/settings">Settings</a>
         <a href="/dashboard">Dashboard</a>
     </div>
+    <!-- Non-functional Search bar for stock queries -->
+        <div class="search-bar">
+            <form class="d-flex" method="POST"
+            action="{% url 'search_stocks' %}">
+
+                {% csrf_token %}
+
+                <input type="text" placeholder="Search stocks..." aria-label="Search stocks" name="searchbar">
+                <button type="submit">Search</button> <!-- Button does nothing on click -->
+            </form>
+        </div>
 </nav>
