Created basic search functionality

--- a/templates/display_stocks.html
+++ b/templates/display_stocks.html
@@ -1,5 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
+<!-- TODO: add stock pages -->
+<!-- TODO: add functionality to add a stock to a comparison -->
+<!-- TODO: add functionality to save stock comparisons after displaying them -->
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
