--- a/templates/savedcomparisons.html
+++ b/templates/savedcomparisons.html
@@ -15,7 +15,7 @@
     <main class="main-savedcomparisons">
         <div class="centered-text">
             <h1 class="welcomeTitle">InvestorHub lets you track the stock market</h1>
-            <p class="welcomeSubtitle">Here are your saved comparisons!</p>
+            <p class="welcomeSubtitle">Here are your saved comparisons, {{ user.username }}!</p>
         </div>
 
         
