--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -25,7 +25,7 @@
                 {% csrf_token %}
 
                 <input type="text" placeholder="Search stocks..." aria-label="Search stocks" name="searchbar">
-                <button type="submit">Search</button> <!-- Button does nothing on click -->
+                <button type="submit">Search</button>
             </form>
         </div>
     </main>
