--- a/templates/register.html
+++ b/templates/register.html
@@ -13,7 +13,7 @@
     <!-- Main content for the Register page -->
     <div class="container">
         <h1>Sign Up</h1>
-        <form action="{% url 'login' %}" method="post">
+        <form action="{% url 'register' %}" method="post">
             {% csrf_token %}
             {{ form.as_p }}
             <button type="submit">Submit</button>
