--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -17,11 +17,11 @@
             <p class="welcomeSubtitle">Enter your query into the search bar below!</p>
         </div>
 
-        <!-- Non-functional Search bar for stock queries -->
         <div class="search-bar">
-            <form>
-                <input type="text" placeholder="Search stocks..." aria-label="Search stocks">
-                <button type="button">Search</button> <!-- Button does nothing on click -->
+            <form action="" method="POST">
+                {% csrf_token %}
+                <input type="text" placeholder="Search stocks..." aria-label="Search stocks" name="company">
+                <button type="submit" value="company">Search</button>
             </form>
         </div>
     </main>
